--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/BeatrizRdez/Fizzbuzz-#readme",
   "devDependencies": {
+    "eslint": "^8.14.0",
     "jest": "^28.0.3"
   }
 }
